# greppy

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/code-search/: SKILL.md
docs/: implementation.md  implementation_v2.md  implementation_v3.md  market_research.md
experiments/: 2026-01-07-chart-generation-search.md  2026-01-07-without-greppy-test.md
src/greppy/: __init__.py  chunker.py  cli.py  embedder.py  store.py  watcher.py
