[project]
name = "greppy"
version = "0.2.0"
description = "Semantic code search CLI using ChromaDB + Ollama"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=0.4.0",
    "click>=8.0",
    "rich>=13.0",
    "tree-sitter>=0.20.0",
    "requests>=2.28.0",
]

[project.scripts]
greppy = "greppy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greppy"]
