[project]
name = "greppy"
version = "0.5.5"
description = "Semantic code search CLI using ChromaDB + sentence-transformers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.4.0",
    "click>=8.0",
    "rich>=13.0",
    "tree-sitter>=0.20.0",
    "requests>=2.28.0",
    "watchdog>=4.0.0",
    "sentence-transformers>=5.2.0",
    "torch>=2.0.0",
    "einops>=0.8.1",
]

[project.scripts]
greppy = "greppy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greppy"]
